--- a/index.html
+++ b/index.html
@@ -6,7 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
+<body class="body">
+    <header class="header">
+        <div>
+            <label>Name</label>
+            <input type="text">
+        </div>
+        <div>
+            <span>Sugarless</span>
+            <input type="checkbox" name="" id="">
+        </div>
+        <div>
+            <select name="" id="">
+                <option value="default">Default</option>
+                <option value="name">Name</option>
+                <option value="price">Price</option>
+            </select>
+        </div>
+    </header>
+    <main class="main" id="main">
+        <!-- <div class="box">
+            <img class="image" src="./assets/images/image-waffle.jpg" alt="">
+            <div class="info-card">
+                <p class="name-product">Pistachio Baklava</p>
+                <p class="sugarless">Sugarless</p>
+                <p class="price">$4.00</p>
+            </div>
+        </div> -->
+    </main>
+    <script src="./src/script.js"></script>
 </body>
 </html>
