--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <header class="header">
         <div>
             <label>Name</label>
-            <input type="text">
+            <input type="text" id="textSearch">
         </div>
         <div>
             <span>Sugarless</span>
-            <input type="checkbox" name="" id="">
+            <input type="checkbox" name="" id="sugarlessCheck">
         </div>
         <div>
-            <select name="" id="">
+            <select name="" id="select">
                 <option value="default">Default</option>
                 <option value="name">Name</option>
                 <option value="price">Price</option>
